# eighties

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
doc/: Doxyfile
doc/dox/: main.dox
doc/html/: app_8hpp.html  classeighties_1_1window.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  event_8hpp.html  event_8hpp_source.html  files.html  functions_eval.html  functions_rela.html  functions_vars.html  graph_legend.html  image_8hpp__incl.map  image_8hpp__incl.md5  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  point_8hpp.html  structeighties_1_1button__event-members.html  structeighties_1_1color.html  structeighties_1_1color__coll__graph.md5  structeighties_1_1event__coll__graph.md5  structeighties_1_1key__event-members.html  structeighties_1_1key__event.html  window_8hpp__incl.map
doc/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  (+56 more)
docs/: annotated.html  app_8hpp_source.html  classeighties_1_1image-members.html  classeighties_1_1image.html  classeighties_1_1point-members.html  classeighties_1_1point.html  classeighties_1_1window-members.html  color_8hpp.html  color_8hpp__incl.map  color_8hpp__incl.md5  color_8hpp_source.html  dir_36f15a76b34aab76fd15ad9ec0b06ea0.html  dir_4300157e516c6f3311809885d2583814.html  dir_e68e8157741866f444e17edd764ebbae.html  event_8hpp.html  event_8hpp__incl.map  event_8hpp__incl.md5  event_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  image_8hpp.html  image_8hpp_source.html  index.html  main_8dox.html  menudata.js  namespaceeighties.html  namespacemembers_enum.html  point_8hpp_source.html  structeighties_1_1button__event.html  structeighties_1_1color-members.html  structeighties_1_1color__coll__graph.map  structeighties_1_1event-members.html  structeighties_1_1event.html  structeighties_1_1event__coll__graph.map  structeighties_1_1key__event.html  window_8hpp.html  window_8hpp__incl.md5  window_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+61 more)
include/eighties/: app.hpp  color.hpp  event.hpp  image.hpp  point.hpp  window.hpp
src/: CMakeLists.txt  app.cpp  canvas.cpp  canvas.hpp  eighties_app.cpp  eighties_app.hpp  event.cpp  image.cpp  image_impl.hpp  main.cpp  scroll_area.cpp  scroll_area.hpp  window.cpp  window_impl.hpp
tests/: CMakeLists.txt  README-ASSETS-LICENSE.md  mandelbrot-par.cpp  mandelbrot-zoom.cpp  mandelbrot.cpp  test-image.cpp  test-position.cpp  test1.cpp
